1. A script for installing Jupyter Notebook to a cluster.

--- a/work/hysh/raspberry/hysh-raspberry-ipyparallel.ipynb
+++ b/work/hysh/raspberry/hysh-raspberry-ipyparallel.ipynb
@@ -52,6 +52,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Install \"notebook\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hysh cluster.json \"pip3 install -U notebook | tee\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Check the cluster management tool"
    ]
   },
