1. The latest IP-cluster configuration template.

--- a/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
+++ b/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
@@ -175,7 +175,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "portRange = TCPPortRange(8801)"
+    "# In the firewall rule, we can reserve 10 * 11 = 110 ports \n",
+    "# to be able to re-start controller 10 times\n",
+    "# So, we expose ports from 8081 to 8910\n",
+    "portRange = TCPPortRange(9801)"
    ]
   },
   {
@@ -185,10 +188,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 11 ports for each controller instance\n",
     "settings = {\n",
     "    \"CONTROLLER_CLUSTER_DEFINITION\": \"controllers.cluster.json\",\n",
     "    \"WORKER_CLUSTER_DEFINITION\": \"workers.cluster.json\",\n",
-    "    \"IP_ADDRESS\": \"0.0.0.0\",\n",
+    "    \"IP_ADDRESS\": \"34.239.11.167\",\n",
     "    \"REGISTRATION_PORT\": portRange.next(),\n",
     "    \"CONTROL_PORT_1\": portRange.next(),\n",
     "    \"CONTROL_PORT_2\": portRange.next(),\n",
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "superb-thriller",
+   "id": "adopted-coach",
    "metadata": {},
    "source": [
     "## Create the cluster"
@@ -215,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "danish-punch",
+   "id": "fourth-immigration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unusual-tenant",
+   "id": "generic-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,23 +287,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "empty-bidding",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cluster.cluster.settings)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "otherwise-season",
    "metadata": {},
    "source": [
     "## Read controller settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "clean-blank",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remoteSettings = HyperShellIPControllerSettings(\"~/.ipython/profile_default/security/ipcontroller-engine.json\")\n",
-    "remoteSettings = remoteSettings.process(\"controllers.cluster.json\")\n",
-    "settings[\"KEY\"] = remoteSettings[\"key\"]"
    ]
   },
   {
@@ -361,20 +363,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "legislative-kernel",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.c(\"ps\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "sticky-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
     "cluster.w(\"ps\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "neural-buffalo",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
