1. Connecting to a cluster through the HySh organization.

--- a/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
+++ b/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
@@ -190,9 +190,9 @@
    "source": [
     "# 11 ports for each controller instance\n",
     "settings = {\n",
-    "    \"CONTROLLER_CLUSTER_DEFINITION\": \"controllers.cluster.json\",\n",
-    "    \"WORKER_CLUSTER_DEFINITION\": \"workers.cluster.json\",\n",
-    "    \"IP_ADDRESS\": \"34.239.11.167\",\n",
+    "    \"CONTROLLER_CLUSTER_DEFINITION\": \"~/controllers.cluster.json\",\n",
+    "    \"WORKER_CLUSTER_DEFINITION\": \"~/workers.cluster.json\",\n",
+    "    \"IP_ADDRESS\": \"0.0.0.0\",\n",
     "    \"REGISTRATION_PORT\": portRange.next(),\n",
     "    \"CONTROL_PORT_1\": portRange.next(),\n",
     "    \"CONTROL_PORT_2\": portRange.next(),\n",
@@ -242,8 +242,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.c(\"pip install ipyparallel\")\n",
-    "cluster.w(\"pip install ipyparallel\")"
+    "controllersResponse = cluster.c(\"pip install ipyparallel\")\n",
+    "workersResponse = cluster.w(\"pip install ipyparallel\")\n",
+    "print(controllersResponse)\n",
+    "print(workersResponse)"
    ]
   },
   {
@@ -283,6 +285,7 @@
    "source": [
     "remoteSettings = cluster.cj(\"cat ~/.ipython/profile_default/security/ipcontroller-engine.json | tee\")\n",
     "settings[\"KEY\"] = remoteSettings[\"key\"]\n",
+    "settings[\"IP_ADDRESS\"] = \"34.239.11.167\"\n",
     "cluster.s(settings)"
    ]
   },
