1. Almost final implementation for connecting engines to the controller.

--- a/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
+++ b/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
@@ -265,7 +265,8 @@
    "source": [
     "cluster.ct(\"\"\"\n",
     "ipcontroller \\\n",
-    "    --ip={IP_ADDRESS} \\\n",
+    "    --log-level=DEBUG \\\n",
+    "    --log-to-file=True \\\n",
     "    --location={IP_ADDRESS} \\\n",
     "    --HubFactory.regport={REGISTRATION_PORT} \\\n",
     "    --HubFactory.hb={HB_PING_PORT},{HB_PONG_PORT} \\\n",
@@ -304,7 +305,7 @@
    "id": "otherwise-season",
    "metadata": {},
    "source": [
-    "## Read controller settings"
+    "## Write engine settings"
    ]
   },
   {
@@ -360,7 +361,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.w(\"/usr/local/bin/ipengine --profile-dir=~/.ipython/profile_default/ &\")"
+    "cluster.w(\"/usr/local/bin/ipengine --log-level=DEBUG --log-to-file=True --profile-dir=~/.ipython/profile_default/ &\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "oriented-suction",
+   "metadata": {},
+   "source": [
+    "## Check engines"
    ]
   },
   {
@@ -376,12 +385,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sticky-remainder",
+   "id": "sticky-killer",
    "metadata": {},
    "outputs": [],
    "source": [
     "cluster.w(\"ps\")"
    ]
+  },
+  {
+    "cell_type": "code",
+    "execution_count": null,
+    "id": "sticky-young",
+    "metadata": {},
+    "outputs": [],
+    "source": [
+        "hysh controllers.cluster.json \"cat /home/jovyan/.ipython/profile_default/log/*\""
+    ]
+  },
+  {
+    "cell_type": "code",
+    "execution_count": null,
+    "id": "sticky-dicker",
+    "metadata": {},
+    "outputs": [],
+    "source": [
+       "hysh workers.cluster.json \"cat /root/.ipython/profile_default/log/ipengine*\""
+    ]
   }
  ],
  "metadata": {
