--- a/work/ipyparallel/ipyparallel-examples.ipynb
+++ b/work/ipyparallel/ipyparallel-examples.ipynb
@@ -25,7 +25,7 @@
     }
    ],
    "source": [
-    "cluster = ipyparallel.Client(profile='default', url_file='/root/.ipython/profile_default/security/ipcontroller-client.json')\n",
+    "cluster = ipyparallel.Client(profile='default', url_file='/home/jovyan/.ipython/profile_default/security/ipcontroller-client.json')\n",
     "print('profile:', cluster.profile)\n",
     "print(\"IDs:\", cluster.ids)"
    ]
