1. Changed 'ipyparallel' connectivity to make engines connect.

--- a/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
+++ b/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
@@ -193,6 +193,7 @@
     "    \"CONTROLLER_CLUSTER_DEFINITION\": \"~/controllers.cluster.json\",\n",
     "    \"WORKER_CLUSTER_DEFINITION\": \"~/workers.cluster.json\",\n",
     "    \"IP_ADDRESS\": \"0.0.0.0\",\n",
+    "    \"LOCATION_IP_ADDRESS\": \"34.239.11.167\",\n",
     "    \"REGISTRATION_PORT\": portRange.next(),\n",
     "    \"CONTROL_PORT_1\": portRange.next(),\n",
     "    \"CONTROL_PORT_2\": portRange.next(),\n",
@@ -267,7 +268,8 @@
     "ipcontroller \\\n",
     "    --log-level=DEBUG \\\n",
     "    --log-to-file=True \\\n",
-    "    --location={IP_ADDRESS} \\\n",
+    "    --ip={IP_ADDRESS} \\\n",
+    "    --location={LOCATION_IP_ADDRESS} \\\n",
     "    --HubFactory.regport={REGISTRATION_PORT} \\\n",
     "    --HubFactory.hb={HB_PING_PORT},{HB_PONG_PORT} \\\n",
     "    --HubFactory.control={CONTROL_PORT_1},{CONTROL_PORT_2} \\\n",
@@ -317,7 +319,7 @@
    "source": [
     "cluster.wt(\"\"\"\n",
     "mkdir -p ~/.ipython/profile_default/security\n",
-    "sudo echo \"{ \\\n",
+    "echo \"{ \\\n",
     "  \\\\\"ssh\\\\\": \\\\\"\\\\\", \\\n",
     "  \\\\\"interface\\\\\": \\\\\"tcp://{IP_ADDRESS}\\\\\", \\\n",
     "  \\\\\"registration\\\\\": {REGISTRATION_PORT}, \\\n",
@@ -361,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.w(\"/usr/local/bin/ipengine --log-level=DEBUG --log-to-file=True --profile-dir=~/.ipython/profile_default/ &\")"
+    "cluster.w(\"ipengine --log-level=DEBUG --log-to-file=True --profile-dir=~/.ipython/profile_default/ &\")"
    ]
   },
   {
@@ -399,7 +401,7 @@
     "metadata": {},
     "outputs": [],
     "source": [
-        "hysh controllers.cluster.json \"cat /home/jovyan/.ipython/profile_default/log/*\""
+        "!hysh ~/controllers.cluster.json \"cat ~/.ipython/profile_default/log/*\""
     ]
   },
   {
@@ -409,7 +411,7 @@
     "metadata": {},
     "outputs": [],
     "source": [
-       "hysh workers.cluster.json \"cat /root/.ipython/profile_default/log/ipengine*\""
+       "!hysh ~/workers.cluster.json \"cat ~/.ipython/profile_default/log/ipengine*\""
     ]
   }
  ],
