1. Finalized the 'ipcluster' initialization script.

--- a/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
+++ b/work/hysh/colab/hysh-colab-ipcluster-configuration-template.ipynb
@@ -192,7 +192,7 @@
     "settings = {\n",
     "    \"CONTROLLER_CLUSTER_DEFINITION\": \"~/controllers.cluster.json\",\n",
     "    \"WORKER_CLUSTER_DEFINITION\": \"~/workers.cluster.json\",\n",
-    "    \"IP_ADDRESS\": \"0.0.0.0\",\n",
+    "    \"BIND_IP_ADDRESS\": \"0.0.0.0\",\n",
     "    \"LOCATION_IP_ADDRESS\": \"34.239.11.167\",\n",
     "    \"REGISTRATION_PORT\": portRange.next(),\n",
     "    \"CONTROL_PORT_1\": portRange.next(),\n",
@@ -268,7 +268,7 @@
     "ipcontroller \\\n",
     "    --log-level=DEBUG \\\n",
     "    --log-to-file=True \\\n",
-    "    --ip={IP_ADDRESS} \\\n",
+    "    --ip={BIND_IP_ADDRESS} \\\n",
     "    --location={LOCATION_IP_ADDRESS} \\\n",
     "    --HubFactory.regport={REGISTRATION_PORT} \\\n",
     "    --HubFactory.hb={HB_PING_PORT},{HB_PONG_PORT} \\\n",
@@ -288,7 +288,6 @@
    "source": [
     "remoteSettings = cluster.cj(\"cat ~/.ipython/profile_default/security/ipcontroller-engine.json | tee\")\n",
     "settings[\"KEY\"] = remoteSettings[\"key\"]\n",
-    "settings[\"IP_ADDRESS\"] = \"34.239.11.167\"\n",
     "cluster.s(settings)"
    ]
   },
@@ -321,7 +320,7 @@
     "mkdir -p ~/.ipython/profile_default/security\n",
     "echo \"{ \\\n",
     "  \\\\\"ssh\\\\\": \\\\\"\\\\\", \\\n",
-    "  \\\\\"interface\\\\\": \\\\\"tcp://{IP_ADDRESS}\\\\\", \\\n",
+    "  \\\\\"interface\\\\\": \\\\\"tcp://{LOCATION_IP_ADDRESS}\\\\\", \\\n",
     "  \\\\\"registration\\\\\": {REGISTRATION_PORT}, \\\n",
     "  \\\\\"control\\\\\": {CONTROL_PORT_2}, \\\n",
     "  \\\\\"mux\\\\\": {MUX_PORT_2}, \\\n",
@@ -330,7 +329,7 @@
     "  \\\\\"task\\\\\": {TASK_PORT_2}, \\\n",
     "  \\\\\"iopub\\\\\": {IOPUB_PORT_2}, \\\n",
     "  \\\\\"key\\\\\": \\\\\"{KEY}\\\\\", \\\n",
-    "  \\\\\"location\\\\\": \\\\\"{IP_ADDRESS}\\\\\", \\\n",
+    "  \\\\\"location\\\\\": \\\\\"{LOCATION_IP_ADDRESS}\\\\\", \\\n",
     "  \\\\\"pack\\\\\": \\\\\"json\\\\\", \\\n",
     "  \\\\\"unpack\\\\\": \\\\\"json\\\\\", \\\n",
     "  \\\\\"signature_scheme\\\\\": \\\\\"hmac-sha256\\\\\" \\\n",
