1. Some documentation changes.

--- a/work/hysh/ipyparallel/hysh-ipyparallel-cluster.ipynb
+++ b/work/hysh/ipyparallel/hysh-ipyparallel-cluster.ipynb
@@ -5,7 +5,7 @@
    "id": "improving-daisy",
    "metadata": {},
    "source": [
-    "# Google Colab \"ipcluster\" deployment script"
+    "# HyperShell \"ipyparallel\" cluster deployment"
    ]
   },
   {
